--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,28 @@
     "name": "Bike Project",
     "short_name": "Bike Project",
     "description": "A project that collects user info as they ride their bike",
-    "start_url": "/pages/main.html",
+    "start_url": "/main.html",
+    "id": "/main.html",
     "display": "standalone",
     "background_color": "#FFE9D2",
     "theme_color": "#FFE1C4",
     "orientation": "portrait-primary",
+    "screenshots": [
+        {
+            "src": "android/android-launchericon-512-512.png",
+            "sizes": "512x512",
+            "type": "image/gif",
+            "form_factor": "wide", 
+            "label": "widgets"
+        },
+        {
+            "src": "android/android-launchericon-512-512.png",
+            "sizes": "512x512",
+            "type": "image/gif",
+            "form_factor": "narrow", 
+            "label": "widgets"   
+        }
+    ],
     "icons": [
         {
           "src": "windows11/SmallTile.scale-100.png",
